--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 version = "0.1.0"
 requires-python = ">=3.9"
 license = { text = "Apache-2.0" }
-dependencies = ["beautifulsoup4", "pydantic"]
+dependencies = ["beautifulsoup4", "pydantic", "httpx", "lxml"]
 
 [project.urls]
 Homepage = "https://github.com/ddbj/ddbj-record-specifications"
@@ -17,7 +17,14 @@ Documentation = "https://github.com/ddbj/ddbj-record-specifications/blob/main/RE
 Repository = "https://github.com/ddbj/ddbj-record-specifications.git"
 
 [project.optional-dependencies]
-tests = ["isort", "mypy", "pylint", "pytest-mock", "pytest"]
+tests = [
+    "isort",
+    "mypy",
+    "pylint",
+    "pytest-mock",
+    "pytest",
+    "types-beautifulsoup4",
+]
 
 [project.scripts]
 parse_feature_table = "ddbj_record_validator.feature_table.parse_feature_table:main"
