--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 version = "0.1.0"
 requires-python = ">=3.9"
 license = { text = "Apache-2.0" }
-dependencies = ["beautifulsoup4", "pydantic", "httpx", "lxml"]
+dependencies = ["beautifulsoup4", "pydantic", "httpx", "lxml", "jsonref"]
 
 [project.urls]
 Homepage = "https://github.com/ddbj/ddbj-record-specifications"
